syntax = "proto3";

package proto;  // 声明所在包

import "google/protobuf/empty.proto";
import "interfaces/proto/common.proto";

option go_package = "./;proto";

service Article {
  rpc FindById(FindByIdReq) returns (Response) {}
  rpc FindAll(google.protobuf.Empty) returns (Response) {}
  rpc GetById (GetByIdReq) returns (Response) {}
}

message GetByIdReq {
  int64 id = 1;
}

message FindByIdReq {
  int64 id = 1;
  int32 size = 2;
}
